fix z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,5 +61,5 @@
 
 .z1000
 {
-    z-index: 1000 !important;
+    z-index: 100 !important;
 }
